--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,17 +1,14 @@
 @import '@fontsource/fira-mono';
 
+/*settings*/
 :root {
-  --font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+  --font-body: 'Times New Roman', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --font-mono: 'Fira Mono', monospace;
-  --color-bg-0: rgb(202, 216, 228);
-  --color-bg-1: hsl(255, 255, 255);
-  --color-bg-2: hsl(224, 44%, 95%);
-  --color-theme-1: #ff3e00;
-  --color-theme-2: #4075a6;
-  --color-text: rgba(0, 0, 0, 0.7);
-  --column-width: 42rem;
-  --column-margin-top: 4rem;
+  --primary-color: rgb(51, 51, 51);
+  --secondary-color: rgb(245, 245, 245);
+  --tertiary-color: rgb(255, 255, 255);
+  --color-text: rgb(51, 51, 51);
   font-family: var(--font-body);
   color: var(--color-text);
 }
@@ -19,7 +16,6 @@
 body {
   min-height: 100vh;
   margin: 0rem;
-  background-attachment: fixed;
   background-color: var(--color-bg-1);
   overscroll-behavior: none;
   -webkit-user-select: none;
@@ -28,6 +24,7 @@ body {
   overflow-y: hidden;
 }
 
+/* general styling */
 h1,
 h2,
 p,
@@ -57,41 +54,8 @@ h2 {
   font-size: 1rem;
 }
 
-pre {
-  font-size: 16px;
-  font-family: var(--font-mono);
-  background-color: rgba(255, 255, 255, 0.45);
-  border-radius: 3px;
-  box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
-  padding: 0.5em;
-  overflow-x: auto;
-  color: var(--color-text);
-}
-
 input,
 button {
-  font-size: inherit;
-  font-family: inherit;
-}
-
-button:focus:not(:focus-visible) {
-  outline: none;
-}
-
-@media (min-width: 720px) {
-  h1 {
-    font-size: 2.4rem;
-  }
-}
-
-.visually-hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: auto;
-  margin: 0;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap;
+  /* font-size: inherit;
+  font-family: inherit; */
 }
