--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -11,7 +11,7 @@
   --paper-color: rgb(242, 239, 230);
   --dark-primary-color: rgb(39, 39, 43);
   --dark-secondary-color: rgb(44, 44, 49);
-  --border-radius: 12px;
+  --border-radius: 2px;
   font-family: var(--font-body);
   color: var(--primary-color);
 }
@@ -56,7 +56,6 @@ h2 {
   font-size: 1rem;
 }
 
-
 input,
 button {
   min-height: 30px;
@@ -64,7 +63,18 @@ button {
 }
 
 button {
-  background: var(--primary-color);
+  /* background: var(--primary-color);
   color: var(--tertiary-color);
-  border-radius: var(--border-radius);
+  border-radius: var(--border-radius); */
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background: var(--tertiary-color);
+  color: var(--primary-color);
+}
+
+button.darkmode {
+  background: var(--dark-secondary-color);
+  color: var(--tertiary-color);
 }
